Finsh the rename of DroolTool -> Zybach and run a gen-all on a restored database backup

--- a/Source/Zybach.Web/src/app/pages/help/help.component.html
+++ b/Source/Zybach.Web/src/app/pages/help/help.component.html
@@ -8,7 +8,7 @@
     <app-alert-display></app-alert-display>
     <h2 class="d-inline-block">Help</h2>
     <p>
-        For more information please contact the Rosedale-DroolTool Bravo Water Storage District:
+        For more information please contact the Rosedale-Zybach Bravo Water Storage District:
     </p>
     <dl>
         <dt>Phone:</dt>
