--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -57,14 +57,14 @@
             </div>
             <div class="row">
                 <div class="col-6 col-lg-4 neighborhood-button">
-                    <a routerLink="/neighborhood-explorer" routerLinkActive="true" class="btn btn-lg btn-drooltool" style="margin-bottom:20px">Neighborhood Explorer</a>
+                    <a routerLink="/neighborhood-explorer" routerLinkActive="true" class="btn btn-lg btn-zybach" style="margin-bottom:20px">Neighborhood Explorer</a>
                     <p class="b2">
                         Find out how your neighborhood contributes to urban drool and 
                         what you can do.
                     </p>
                 </div>
                 <div class="col-6 col-lg-4 watershed-button">
-                    <button class="btn btn-lg btn-drooltool" style="margin-bottom:20px">Watershed Explorer</button>
+                    <button class="btn btn-lg btn-zybach" style="margin-bottom:20px">Watershed Explorer</button>
                     <p class="b2">
                         Learn more about your watershed and the benefits of reducing urban drool
                     </p>
