--- a/Source/Zybach.Web/src/app/pages/user-edit/user-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/user-edit/user-edit.component.html
@@ -47,7 +47,7 @@
           <i class="fas fa-bolt"></i> Required field
         </div>
         <div class="col-sm text-right">
-          <button type="submit" class="btn btn-drooltool" [disabled]="!editUserForm.form.valid || isLoadingSubmit">
+          <button type="submit" class="btn btn-zybach" [disabled]="!editUserForm.form.valid || isLoadingSubmit">
             <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
             Submit
           </button>
