--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -27,7 +27,7 @@
         </div> -->
         <div class="row" style="z-index:1">
             <div class="col-12">
-                <nav class="navbar navbar-drooltool navbar-expand-lg navbar-dark stroke nav-fill">
+                <nav class="navbar navbar-zybach navbar-expand-lg navbar-dark stroke nav-fill">
                     <a routerLink="/" routerLinkActive="active" class="navbar-brand">
                         <img src="assets/main/logos/{{leadOrganizationLogoFilename()}}" class="navbarLogo">
                     </a>
