--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -32,7 +32,7 @@
                 <p>
                     The program is free software; you can redistribute it and/or modify it under the terms of the <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">GNU Affero
                     General Public License</a>.<br>
-                    Source code is available on <a href="https://github.com/sitkatech/drooltool" target="_blank">GitHub</a>.
+                    Source code is available on <a href="https://github.com/sitkatech/zybach" target="_blank">GitHub</a>.
                     Implementation & Hosting by <a href="http://sitkatech.com">Sitka Technology Group</a>
                 </p>
             </div>
