--- a/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.html
@@ -13,7 +13,7 @@
                                         placeholder="Enter address or zip code"
                                         (keyUp.enter)="makeNominatimRequest(searchText)">
                                     <div class="input-group-append">
-                                        <button class="btn btn-drooltool search" type="button"
+                                        <button class="btn btn-zybach search" type="button"
                                             (click)="makeNominatimRequest(searchText)">
                                             <i class="fas fa-search" style="color:white"></i>
                                         </button>
@@ -123,7 +123,7 @@
     </div>
     <div class="col-lg-9 pl-0 pr-0">
         <div #mapDiv id={{mapID}} class="location-card" [style.min-height]="mapHeight" style="height:100%">
-            <button *ngIf="searchActive" (click)="displayTraceOrZoomToNeighborhood($event)" class="btn btn-drooltool"
+            <button *ngIf="searchActive" (click)="displayTraceOrZoomToNeighborhood($event)" class="btn btn-zybach"
                 style="position:absolute; bottom:10px; right:10px; z-index:100000">{{traceActive ? "Zoom to my Neighborhood" : "Where does my water go?"}}</button>
         </div>
     </div>
