--- a/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/user-list/user-list.component.html
@@ -22,7 +22,7 @@
 </div>
 <div class="container">
     <div style="margin: 1rem 0 1rem 0;" class="float-right">
-        <a class="btn btn-drooltool btn-sm mr-3" routerLink="/invite-user">Invite User</a>
+        <a class="btn btn-zybach btn-sm mr-3" routerLink="/invite-user">Invite User</a>
         <a class="btn btn-secondary btn-sm" style="cursor: pointer;" (click)="exportToCsv()" placement="top" ngbTooltip="Download list of Users"><i
           class="fas fa-download"></i></a>
     </div>
