Testing publish webhooks in portainer

--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -25,6 +25,7 @@
             <h1>Only rain down the drain</h1>
             <div>
                 <p class="b1">
+                    If you're reading this, it means that the webhooks are configured correctly!
                     Urban drool contributes to more than 1 million gallons of polluted discharge to 
                     Aliso Creek each day.
                     <br>
