--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -2,39 +2,19 @@
 <div class="mh-auto min-vh-100">
     <router-outlet></router-outlet>
 </div>
-<footer class="footer">
+<footer class="footer pb-2">
     <div class="container">
         <br>
         <div class="row">
             <div class="col no-gutters text-center">
-                <a href="/" alt="" target="_blank">
-                    <img src="assets/main/logos/h2oc_color_logo.PNG" style="height: 55px;">
-                </a>
-            </div>
-            <div class="col no-gutters text-center">
-                <a href="/" alt="" target="_blank">
-                    <img src="assets/main/logos/Geosyntec_logo.png" style="height: 55px;">
-                </a>
-            </div>
-            <div class="col no-gutters text-center">
-                <a href="/" alt="" target="_blank">
-                    <img src="assets/main/logos/mnwd_color_logo.png" style="height: 55px;">
+                <a href="https://tpnrd.org/" alt="" target="_blank">
+                    <img src="assets/main/logos/logo.png" style="height: 125px;;">
                 </a>
             </div>
             <div class="col no-gutters text-center">
                 <a href="https://sitkatech.com/" alt="Sitka Technology Group" target="_blank">
-                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 55px;">
+                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 125px;">
                 </a>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-12 text-center">
-                <p>
-                    The program is free software; you can redistribute it and/or modify it under the terms of the <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">GNU Affero
-                    General Public License</a>.<br>
-                    Source code is available on <a href="https://github.com/sitkatech/zybach" target="_blank">GitHub</a>.
-                    Implementation & Hosting by <a href="http://sitkatech.com">Sitka Technology Group</a>
-                </p>
             </div>
         </div>
     </div>
