--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -1,34 +1,9 @@
 <div class="header-outer">
-    <div class="container-fluid">
-        <!-- <div class="row d-none d-lg-flex" style="margin-bottom:-25px">
-            <div class="col-12">
-                <ul class="mb-0 list-inline text-right top-bar">
-                    <li class="nav-item mr-auto ml-auto" routerLinkActive="active" *ngIf="!isAuthenticated()">
-                        <a href="javascript:void(0);" (click)="login()" routerLinkActive="active" class="top-bar-nav-link pb-lg-0" style="z-index:2">Sign In</a>
-                    </li>
-                    <li class="nav-item dropdown welcomeUser" routerLinkActive="active" *ngIf="isAuthenticated()" style="z-index:2"> 
-                        <a href="#" class="nav-link dropdown-toggle pb-lg-0 pr-3 top-bar-nav-link" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Account
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            
-                            <a routerLink="/help" class="dropdown-item">
-                                Get Help
-                            </a>
-                            <a *ngIf="isAdministrator()" routerLink="/users" class="dropdown-item">
-                                View all Users
-                            </a>
-                            <a href="javascript:void(0);" (click)="logout()" class="dropdown-item">Sign Out</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
+    <div class="container pr-0 pl-0">
         <div class="row" style="z-index:1">
             <div class="col-12">
                 <nav class="navbar navbar-zybach navbar-expand-lg navbar-dark stroke nav-fill">
-                    <a routerLink="/" routerLinkActive="active" class="navbar-brand">
+                    <a href="https://tpnrd.org/" class="navbar-brand">
                         <img src="assets/main/logos/{{leadOrganizationLogoFilename()}}" class="navbarLogo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -38,6 +13,11 @@
                     <div class="collapse navbar-collapse b4" id="navbarNav">
                         <ul class="navbar-nav w-100">
                             <li class="nav-item" routerLinkActive="active">
+                                <a class="nav-link" routerLink="/" routerLinkActive="active">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="nav-item" routerLinkActive="active">
                                 <a class="nav-link" routerLink="/about" routerLinkActive="active">
                                     About
                                 </a>
@@ -46,18 +26,6 @@
                             <li class="nav-item" routerLinkActive="active">
                                 <a class="nav-link" routerLink="/neighborhood-explorer" routerLinkActive="active">
                                     Neighborhood Explorer
-                                </a>
-                            </li>
-                            <div class="dropdown-divider"></div>
-                            <li class="nav-item" routerLinkActive="active">
-                                <a class="nav-link" routerLink="/neighborhood-explorer" routerLinkActive="active">
-                                    Watershed Explorer
-                                </a>
-                            </li>
-                            <div class="dropdown-divider"></div>
-                            <li class="nav-item" routerLinkActive="active">
-                                <a class="nav-link" routerLink="/take-action" routerLinkActive="active">
-                                    Take Action
                                 </a>
                             </li>
                         </ul>
