--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -25,17 +25,12 @@
             <h1>Only rain down the drain</h1>
             <div>
                 <p class="b1">
-                    If you're reading this, it means that the webhooks are configured correctly!
-                    Urban drool contributes to more than 1 million gallons of polluted discharge to 
-                    Aliso Creek each day.
-                    <br>
-                    It starts in a gutter near you...
+                    Proin ut velit accumsan turpis consequat auctor id in tellus. Nulla vel lacinia eros. Duis dignissim ultricies dolor
+                    eget rutrum. Suspendisse quis massa non massa scelerisque euismod. In tincidunt ultrices gravida. Phasellus sit amet
+                    risus mattis, accumsan leo in, bibendum augue.
                 </p>
                 <p class="b1">
-                    Small changes in how you use water outdoors can eliminate drool and save you money.
-                </p>
-                <p class="b1">
-                    <a routerLink="/about" routerLinkActive="true">Learn more about Urban Drool</a>
+                    <a routerLink="/about" routerLinkActive="true">Lorem more about ipsum dolor</a>
                 </p>
             </div>
         </div>
@@ -46,28 +41,23 @@
 </div>
     <div class="row homeSection h-100 pt-0" style="background-image:url('../../assets/main/Map_Background.png'); background-size:auto; margin-top:80px">
         <div class="col-12 text-center my-auto">
-            <h1 style="margin-bottom:30px">Do you add to urban drool?
+            <h1 style="margin-bottom:30px">Nullam commodo metus egestas?
             </h1>
             <div class="row" style="margin-bottom:30px">
                 <div class="col-12 col-md-6 offset-md-3">
                     <p class="b1">
-                        Use these interactive tools to learn more about urban water usage 
-                        and its effect on our watersheds.
+                        Consequat erat ac, fringilla est. Fusce vel leo eget neque mattis suscipit. Mauris luctus
+                        urna erat, id gravida nibh vulputate blandit. Aenean sed nisi egestas, mattis tortor a, mollis neque. Nulla sed elit id
+                        elit consequat aliquam vel vel augue. Nulla mattis, sem ac porta pulvinar, elit nunc mollis leo, a ultricies lorem ipsum
+                        in nunc. Nullam posuere semper lorem, nec tristique dui blandit sed.
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 col-lg-4 neighborhood-button">
+                <div class="col-12">
                     <a routerLink="/neighborhood-explorer" routerLinkActive="true" class="btn btn-lg btn-zybach" style="margin-bottom:20px">Neighborhood Explorer</a>
                     <p class="b2">
-                        Find out how your neighborhood contributes to urban drool and 
-                        what you can do.
-                    </p>
-                </div>
-                <div class="col-6 col-lg-4 watershed-button">
-                    <button class="btn btn-lg btn-zybach" style="margin-bottom:20px">Watershed Explorer</button>
-                    <p class="b2">
-                        Learn more about your watershed and the benefits of reducing urban drool
+                        Morbi tristique, est non tempus volutpat, nisl metus dignissim neque, vulputate tristique turpis ex efficitur purus!
                     </p>
                 </div>
             </div>
@@ -80,14 +70,9 @@
         </div>
         <div class="col-12 col-lg-4 m-lg-auto text-center order-lg-first" style="z-index:2">
             <div>
-                <h1>Take action in your community!</h1>
+                <h1>Consectetur adipiscing elit!</h1>
                 <p class="b2">
-                    Moulton Niguel Water District and the Municipal Water District
-                    of Orange County offer a variety of rebate programs you can participate
-                    in to reduce the amount of urban drool your household creates.
-                </p>
-                <p class="b2">
-                    <a routerLink="/take-action" routerLinkActive="true">Check out rebate programs</a>
+                    Nullam eu blandit massa. Pellentesque egestas, ipsum eu bibendum luctus, quam felis varius neque, eu hendrerit purus nibh non nulla. Praesent elit libero, lacinia semper ipsum eget, euismod pellentesque elit. Phasellus consequat erat arcu, sed eleifend augue ultricies vehicula. Sed molestie elementum dolor, eleifend volutpat neque tincidunt vel. Proin id turpis malesuada, pretium nunc non, sollicitudin est.
                 </p>
             </div>
 
@@ -97,7 +82,7 @@
         <div class="col-12 text-center">
             <div class="row">
                 <div class="col-12">
-                    <h1>News & Updates</h1>
+                    <h1>Quisque & turpis</h1>
                 </div>
             </div>
             <div class="row">
@@ -124,8 +109,8 @@
         <div class="col-12 text-center">
             <div class="row">
                 <div class="col-12">
-                    <h1>Resource Spotlight</h1>
-                    <p class="b2" style="margin-bottom:0"><a routerLink="/take-action" routerLinkActive="true">Explore more Resources</a></p>
+                    <h1>Massa vehicula</h1>
+                    <p class="b2" style="margin-bottom:0"><a routerLink="/take-action" routerLinkActive="true">Explorem more dolrem!</a></p>
                 </div>
             </div>
             <div class="row">
@@ -135,12 +120,12 @@
             </div>
             <div class="row" >
                 <div class="col-12 col-md-6 offset-md-3">
-                    <h3 class="mt-1">New Rebate Option: <br>
-                        Weather-Based Smart Sprinkler Timers
+                    <h3 class="mt-1">Ut velit efficitur: <br>
+                        Faucibus Porttitor Tortor
                     </h3>
-                    <p class="b3">Moulton Niguel offers a variety of rebate programs you can join
-                        to reduce the opportunities your household has to create
-                        urban drool.</p>
+                    <p class="b3">Pellentesque tincidunt, lacus sit amet hendrerit interdum, lorem ipsum semper odio, eget ornare urna augue eget
+                        nibh. Mauris ut est sit amet neque congue imperdiet in vel odio. Duis accumsan hendrerit mi, non auctor ipsum. Proin
+                        aliquet convallis massa non venenatis.</p>
                 </div>
             </div>
         </div>
