* Light reskinning to more closely match TPNRD styles * Hide most aspects of the map explorer * Show Twin Platte NRD boundary by default on map explorer

--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1>Massa vehicula</h1>
-                    <p class="b2" style="margin-bottom:0"><a routerLink="/take-action" routerLinkActive="true">Explorem more dolrem!</a></p>
+                    <p class="b2" style="margin-bottom:0"><a routerLink="/take-action" routerLinkActive="true">Explorem more dolorem!</a></p>
                 </div>
             </div>
             <div class="row">
