--- a/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.scss
+++ b/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.scss
@@ -77,8 +77,8 @@
 }
 
 .search {
-    background-color: $drool-orange;
-    border-color: $drool-orange;
+    background-color: $tpnrd-green;
+    border-color: $tpnrd-green;
 }
 
 .search:focus {
