--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -25,7 +25,7 @@
                             <div class="dropdown-divider"></div>
                             <li class="nav-item" routerLinkActive="active">
                                 <a class="nav-link" routerLink="/neighborhood-explorer" routerLinkActive="active">
-                                    Neighborhood Explorer
+                                    Map Explorer
                                 </a>
                             </li>
                         </ul>
