--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -211,7 +211,7 @@ $ag-range-selected-color-4: darken($ag-range-selected-color-1, 30%);
   }
 
   h1, h2, h3, h4 {
-    color:#ea842c;
+    color:$tpnrd-green;
     font-family: 'Poppins', sans-serif;
   }
 
