--- a/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/neighborhood-explorer/neighborhood-explorer.component.html
@@ -1,5 +1,6 @@
 <div class="row ml-0 mr-0">
-    <div class="col-lg-3 pl-0 pr-0">
+<!--
+    <div class="col-lg-3 pl-0 pr-0 d-none">
         <div class="container-lg d-inline d-lg-flex flex-column min-vh-100">
             <div class="row ml-0 mr-0 flex-fill flex-column">
                 <div class="col-12 p-4 section-search">
@@ -121,13 +122,17 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-9 pl-0 pr-0">
+-->
+
+    <div class="col-lg-12 pl-0 pr-0">
         <div #mapDiv id={{mapID}} class="location-card" [style.min-height]="mapHeight" style="height:100%">
             <button *ngIf="searchActive" (click)="displayTraceOrZoomToNeighborhood($event)" class="btn btn-zybach"
                 style="position:absolute; bottom:10px; right:10px; z-index:100000">{{traceActive ? "Zoom to my Neighborhood" : "Where does my water go?"}}</button>
         </div>
     </div>
-    <div class="col-12 d-lg-none">
+
+<!--
+    <div class="col-12 d-lg-none d-none">
         <div class="row">
             <div class="col-6 section-rebates text-center">
                 <div class="row h-100">
@@ -156,5 +161,5 @@
             </div>
         </div>
     </div>
-
+-->
 </div>
