make the homepage a rich text editor

--- a/Source/Zybach.Web/src/app/pages/about/about.component.html
+++ b/Source/Zybach.Web/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
             <h1>About</h1>
 
             <div class="mt-2">
-                <rio-custom-rich-text [customRichTextTypeID]="richTextTypeID"></rio-custom-rich-text>
+                <sitka-custom-rich-text [customRichTextTypeID]="richTextTypeID"></sitka-custom-rich-text>
             </div>
         </div>
     </div>
