--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -20,114 +20,6 @@
     </ngb-alert>
 
     <app-alert-display></app-alert-display>
-    <div class="row homeSection">
-        <div class="col-12 col-lg-6 text-center order-lg-last">
-            <h1>Only rain down the drain</h1>
-            <div>
-                <p class="b1">
-                    Proin ut velit accumsan turpis consequat auctor id in tellus. Nulla vel lacinia eros. Duis dignissim ultricies dolor
-                    eget rutrum. Suspendisse quis massa non massa scelerisque euismod. In tincidunt ultrices gravida. Phasellus sit amet
-                    risus mattis, accumsan leo in, bibendum augue.
-                </p>
-                <p class="b1">
-                    <a routerLink="/about" routerLinkActive="true">Lorem more about ipsum dolor</a>
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-lg-6 order-lg-first text-over-picture">
-            <div style="background-color:lightgrey; height:450px;"></div>
-        </div>
-    </div>
-</div>
-    <div class="row homeSection h-100 pt-0" style="background-image:url('../../assets/main/Map_Background.png'); background-size:auto; margin-top:80px">
-        <div class="col-12 text-center my-auto">
-            <h1 style="margin-bottom:30px">Nullam commodo metus egestas?
-            </h1>
-            <div class="row" style="margin-bottom:30px">
-                <div class="col-12 col-md-6 offset-md-3">
-                    <p class="b1">
-                        Consequat erat ac, fringilla est. Fusce vel leo eget neque mattis suscipit. Mauris luctus
-                        urna erat, id gravida nibh vulputate blandit. Aenean sed nisi egestas, mattis tortor a, mollis neque. Nulla sed elit id
-                        elit consequat aliquam vel vel augue. Nulla mattis, sem ac porta pulvinar, elit nunc mollis leo, a ultricies lorem ipsum
-                        in nunc. Nullam posuere semper lorem, nec tristique dui blandit sed.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <a routerLink="/neighborhood-explorer" routerLinkActive="true" class="btn btn-lg btn-zybach" style="margin-bottom:20px">Neighborhood Explorer</a>
-                    <p class="b2">
-                        Morbi tristique, est non tempus volutpat, nisl metus dignissim neque, vulputate tristique turpis ex efficitur purus!
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-<div class="container">
-    <div class="row homeSection">
-        <div class="col-12 col-lg-8 m-lg-auto order-lg-last">
-            <div id="takeActionImage"></div>
-        </div>
-        <div class="col-12 col-lg-4 m-lg-auto text-center order-lg-first" style="z-index:2">
-            <div>
-                <h1>Consectetur adipiscing elit!</h1>
-                <p class="b2">
-                    Nullam eu blandit massa. Pellentesque egestas, ipsum eu bibendum luctus, quam felis varius neque, eu hendrerit purus nibh non nulla. Praesent elit libero, lacinia semper ipsum eget, euismod pellentesque elit. Phasellus consequat erat arcu, sed eleifend augue ultricies vehicula. Sed molestie elementum dolor, eleifend volutpat neque tincidunt vel. Proin id turpis malesuada, pretium nunc non, sollicitudin est.
-                </p>
-            </div>
-
-        </div>
-    </div>
-    <div class="row homeSection">
-        <div class="col-12 text-center">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Quisque & turpis</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig"
-                        (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
-                        (beforeChange)="beforeChange($event)" style="padding-top:40px">
-                        <div ngxSlickItem *ngFor="let slide of slides" class="slide">
-                            <div class="slide-container">
-                                <div class="slide-background">
-                                    <div class="slide-module-accent">
-                                        <p class="b3" style="color:#FFF">{{slide.date}}</p>
-                                    </div>
-                                </div>
-                                <p class="b3 slide-link-text"><a href="/">{{slide.title}}</a></p>
-                            </div>
-                        </div>
-                    </ngx-slick-carousel>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row homeSection" style="padding-bottom:80px">
-        <div class="col-12 text-center">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Massa vehicula</h1>
-                    <p class="b2" style="margin-bottom:0"><a routerLink="/take-action" routerLinkActive="true">Explorem more dolorem!</a></p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div id="resourceImage" style="margin: 30px auto"></div>
-                </div>
-            </div>
-            <div class="row" >
-                <div class="col-12 col-md-6 offset-md-3">
-                    <h3 class="mt-1">Ut velit efficitur: <br>
-                        Faucibus Porttitor Tortor
-                    </h3>
-                    <p class="b3">Pellentesque tincidunt, lacus sit amet hendrerit interdum, lorem ipsum semper odio, eget ornare urna augue eget
-                        nibh. Mauris ut est sit amet neque congue imperdiet in vel odio. Duis accumsan hendrerit mi, non auctor ipsum. Proin
-                        aliquet convallis massa non venenatis.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h1>Welcome to the TPNRD Groundwater Platform</h1>
+    <sitka-custom-rich-text [customRichTextTypeID]="homeCustomRichTextTypeID"></sitka-custom-rich-text>
 </div>
