Adding some assets

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -13,9 +13,15 @@
             </div>
             <div class="col no-gutters text-center">
                 <a href="https://sitkatech.com/" alt="Sitka Technology Group" target="_blank">
-                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 125px;">
+                    <img src="assets/main/logos/logo_Sitka_white.png" style="height: 125px;">
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col text-center">
+                © {{currentYear}} Sitka Technology Group, LLC. All Rights Reserved.
+            </div>
+        </div>
+
     </div>
 </footer>
