Remove unrelated code from parent project

--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -20,6 +20,10 @@
     </ngb-alert>
 
     <app-alert-display></app-alert-display>
-    <h1>Welcome to the TPNRD Groundwater Platform</h1>
-    <sitka-custom-rich-text [customRichTextTypeID]="homeCustomRichTextTypeID"></sitka-custom-rich-text>
+    <div class="row">
+        <div class="col mt-3">
+            <h1>Welcome to the TPNRD Groundwater Platform</h1>
+            <sitka-custom-rich-text [customRichTextTypeID]="homeCustomRichTextTypeID"></sitka-custom-rich-text>
+        </div>
+    </div>
 </div>
