* Rename neighborhood explorer -> map explorer * Introduce code for pulling wells from GeoOptix

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -24,7 +24,7 @@
                             </li>
                             <div class="dropdown-divider"></div>
                             <li class="nav-item" routerLinkActive="active">
-                                <a class="nav-link" routerLink="/neighborhood-explorer" routerLinkActive="active">
+                                <a class="nav-link" routerLink="/map-explorer" routerLinkActive="active">
                                     Map Explorer
                                 </a>
                             </li>
