* light restyling * adding GIS layers and first geooptix integration to map explorer * stand up empty component for well details

--- a/Source/Zybach.Web/src/scss/_variables.scss
+++ b/Source/Zybach.Web/src/scss/_variables.scss
@@ -28,6 +28,7 @@ $tpnrd-green: #4aaa42;
 $header-nav-color: #0076c0;
 $dropdown-background-color: #13b5ea;
 $dropdown-text-color: #333333;
+$grid-header-background-color: #0076c0;
 
 $font-family-sans-serif: 'Tahoma', sans-serif, 'Helvetica Neue', sans-serif;
 $font-size: 16px;
